k8s/eks/service.yaml






apiVersion: v1
kind: Service
metadata:
  name: tripsvc
spec:
  type: ClusterIP
  selector:
    app: tripsvc
  ports:
    - port: 80
      targetPort: 8000
