k8s/eks/ingress.yaml




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripsvc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tripsvc
                port:
                  number: 80
